boreal/tests/assets/invalid_files/compilation/variable_empty.yar
rule a {
    strings:
        $foo = "" wide base64
    condition:
        $foo
}
